--- a/ProcessWav.ipynb
+++ b/ProcessWav.ipynb
@@ -2,7 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Imports"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +79,15 @@
     "import math\n",
     "from PIL import Image\n",
     "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Initializations"
    ]
   },
   {
@@ -245,6 +263,15 @@
     "import shutil\n",
     "\n",
     "random.seed(42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create 1 sec wav files and store it in *.npy format"
    ]
   },
   {
@@ -436,7 +463,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use below initialization values for recovery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,6 +511,15 @@
     "        signal = np.fft.irfft(toInverse)\n",
     "        recovered[w*WINDOW_STEP:w*WINDOW_STEP + WINDOW_LENGTH] += signal[:WINDOW_LENGTH].astype(np.int16)\n",
     "    return recovered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test the recovery - convert npy to wav"
    ]
   },
   {
